[package]
name = "nginx-upstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true
