[package]
name = "nginx-upstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
xwarn = "0.0.10"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "rt", "time"] }
futures = "0.3.28"
blake3 = "1.4.1"
reqwest = "0.11.20"
thiserror = "1.0.48"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true

[dev-dependencies]
